# TinyRenderer

./: .gitignore  CMakeLists.txt  README.md  geometry.cpp  geometry.h  main.cpp  model.cpp  model.h  our_gl.cpp  our_gl.h  tgaimage.cpp  tgaimage.h
